PLFM-9982 Authorize and serve SearchIndex queries from the searched slot's snapshot
Search and autocomplete resolve the alias to its physical index and that index's _meta snapshot in one call, and pin the query to that physical index, retrying once if it was deleted by a concurrent swap. Authorization runs over the snapshot's node closure, columns come from its lineage ids, and benefactor filters from its benefactor columns. When no live index exists, the build status is surfaced.